argocd/hiae/prd/manifests/apps/app-frontend-roompatient/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-frontend-roompatient
  name: app-frontend-roompatient
  namespace: apps-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend-roompatient
  template:
    metadata:
      labels:
        app: app-frontend-roompatient
    spec:
      nodeSelector:
        group: workload
      restartPolicy: Always
      containers:
        - image: 264221247403.dkr.ecr.sa-east-1.amazonaws.com/app-frontend-roompatient:6df35d
          imagePullPolicy: IfNotPresent
          name: app-frontend-roompatient-app
          ports:
            - containerPort: 3000
              protocol: TCP
